# QuadraticEquationSolver

./: CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
include/QuadraticEquationSolver/: QuadraticEquationSolver.h
src/: QuadraticEquationSolver.cpp
tests/: unitTests.cpp
